--- a/LLM_Fashion_Recom_Telegram.ipynb
+++ b/LLM_Fashion_Recom_Telegram.ipynb
@@ -133,7 +133,7 @@
       "source": [
         "from huggingface_hub import login\n",
         "login()\n",
-        "##  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"
+        "##  Needs Your Huggingface API Token"
       ]
     },
     {
@@ -1565,7 +1565,7 @@
       },
       "outputs": [],
       "source": [
-        "API_TOKEN = \"7554786298:AAHHKegtBix-88Gn39zqMwlUOWtGA4IHPsI\"\n",
+        "API_TOKEN = \"Needs Your Telegram API Token \"\n",
         "bot = telebot.TeleBot(API_TOKEN)\n",
         "\n",
         "main_outfit_recom = \"\"\n",
