--- a/LLM_Fashion_Recom_Telegram.ipynb
+++ b/LLM_Fashion_Recom_Telegram.ipynb
@@ -139,7 +139,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Translation's Examples**"
+        "**Translation Examples**"
       ],
       "metadata": {
         "id": "y4ssF_e_xx3B"
